Fixes to header spacing.

--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -27,7 +27,6 @@ $govuk-shading: #F9F9F9
 
 .app-header-nav
     padding-top: 0px
-    border-bottom: unset
     background-color: #F1F0EF
 
 .govuk-header__navigation
@@ -71,7 +70,6 @@ $govuk-shading: #F9F9F9
 
 .govuk-header__navigation
   background: #F1F0EF
-  padding: 10px
 
 .govuk-header__navigation-item
   a
@@ -89,6 +87,11 @@ $govuk-shading: #F9F9F9
 .govuk-cookie-banner
   display: none
 
+.govuk-phase-banner
+  padding-top: unset
+  background-color: white
+  z-index: 999
+
 hr
   margin-top: 20px
   margin-bottom: 40px
@@ -100,10 +103,7 @@ hr
   z-index: 999
 
 .app-body
-  padding-top: 140px
-
-  @media (min-width: 640px)
-     padding-top: 60px
+  padding-top: 206px
 
   @media (max-width: 640px)
     padding-top: 60px
